syntax = "proto3";
package pb;
option optimize_for = LITE_RUNTIME;

message SessionInfo {
    uint64 dId = 1;//DecentralizerId
    string pId= 2;//peerId

    uint64 sessionId = 3;
    uint64 type = 4;
    string name = 5;
    uint64 address = 6;
    uint32 port = 7;
    map<string, string> details = 8;
}

message SessionResponse {
    repeated SessionInfo results = 1;
}

message SessionRequest {
    uint64 type = 1;
}